website/extra-scss/extra.scss
// Custom font for headings
@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;600;700");

@font-face {
  font-family: "IBM VGA";
  src: url('../assets/fonts/Web437_IBM_VGA_8x16.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

/*--------------------------------------------------------------------------*/
/* Colour overrides                                                         */
/*--------------------------------------------------------------------------*/
/* Instead of setting the 'pink' palette, we'll keep the default palette
 * and apply customisation based on the 'pink' palette on top of that to keep
 * things simple. */
:root {
  --md-primary-fg-color: #e92063;
  --md-primary-fg-color--light: #ec417a;
  --md-primary-fg-color--dark: #c3185d;
  --md-primary-bg-color: #fff;
  --md-primary-bg-color--light: #ffffffb3;
  --md-accent-fg-color: #f50056;
  --md-accent-fg-color--transparent: #f500561a;
  --md-accent-bg-color: #fff;
  --md-accent-bg-color--light: #ffffffb3;
  --md-typeset-kbd-color: #fffffff0;
}
:root, [data-md-color-scheme=default] {
  --md-default-fg-color: #333;
}

// Additional colour definitions
:root {
  --header-bg-color: #242424;
}

/*--------------------------------------------------------------------------*/
/* General                                                                  */
/*--------------------------------------------------------------------------*/

$min-width-2col:    45em;
$min-width-3col:    60em;
$max-width-content: 56rem;

body {
  -webkit-font-smoothing: auto;
  -moz-osx-font-smoothing: auto;
}

small {
  font-size: 86%;
}

.md-content {
  padding-bottom: 1.5rem;

  @media screen and (min-width: $min-width-3col) {
    padding-bottom: 3rem;
  }

  a {
    font-weight: 600;

    &:hover {
      text-decoration: underline;
    }
  }

  ul {
    list-style: square;
  }
  .compact ul li {
    margin-bottom: 0.1rem;
  }
}

/*--------------------------------------------------------------------------*/
/* Dev site banner                                                          */
/*--------------------------------------------------------------------------*/
.dev-site {
  display: none;

  &.banner {
    background: #cc3010;
    text-align: center;
    padding: 0.8rem;
    position: sticky;

    p {
      color: #ff9;
      font-size: 0.80rem;
      margin: 0.1rem;
    }
    a {
      font-weight: bold;
      text-decoration: underline;
    }
  }
}
.show {
  display: block !important;
}

/*--------------------------------------------------------------------------*/
/* Header & Navigation                                                      */
/*--------------------------------------------------------------------------*/
.md-header {

  background-color: var(--header-bg-color);
  /*
   * There's some weird JavaScript that dynamically toggles the header shadow
   * based on the configuration and some other things... We don't need that, we
   * always want the header shadow to be visible. Without this hack, the shadow
   * only appears on the front page when scrolled down to about 70% of the page.
   */
  box-shadow: 0 0 .2rem #0000001a,0 .2rem .4rem #0003;

  &__title {
    font-weight: 700;
    font-size: 0.98rem;
  }

  &__button.md-logo {
    position: absolute;
    top: 0.1rem;

    :-webkit-any(img,svg) {
      height: 3.4rem;
    }
    :-moz-any(img,svg) {
      height: 3.4rem;
    }
    :is(img,svg) {
      height: 3.4rem;
    }
  }
}

.md-nav {
  font-size: 0.72rem;

}
@media screen and (max-width: 76.1875em) {
  .md-nav--primary .md-nav__title[for=__drawer] {
    background-color: var(--header-bg-color);
  }
}

.md-tabs {
  background-color: #666;

  &__item {
    display: inline-block;
    height: 2.25rem;
  }
  &__link {
    font-size: .76rem;
    margin-top: .63rem;
  }
}

@media screen and (min-width: 76.25em) {
  .md-header__title {
    padding-left: 4.2rem;
  }
  .md-tabs__list {
    padding-left: 4.6rem;
  }
}

/*--------------------------------------------------------------------------*/
/* Search                                                                   */
/*--------------------------------------------------------------------------*/
@media screen and (min-width: $min-width-3col) {
  .md-search__form {
    background-color: #ffffff20;
  }
  .md-search__form:hover {
    background-color: #ffffff38;
  }
}
/* ... */

